css/screen.css
/* ... */
.animated {
  transition-duration: var(--transition-duration);
  transition-timing-function: var(--transition-timing-function);

  transition-property:
    color,
    background-color,
    opacity,
    visibility,
    height,
    width,
    transform,
    transform-origin,
    filter,
    left,
    top,
    right;
}

@media (hover: hover) {
  .hover-fx:hover {
    opacity: 0.75;
  }
}

html {
  background-color: var(--doc-bg-color);
}

html,
body {
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
  color: var(--primary-text-color);
  font-size: max(var(--vw-relative-font-size), 12px);
  line-height: 1.25;
}

svg text {
  fill: var(--primary-text-color);
}

h1 {
  --font-ratio: 2;
  --resolution-capped-font-size: max(calc(var(--font-ratio) * var(--vw-relative-font-size)), 18px);
  --normal-font-size: calc(var(--font-ratio) * 1em);

  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  font-size: min(var(--normal-font-size), var(--resolution-capped-font-size));
}

h2 {
  --font-ratio: 1.5;
  font-size: calc(var(--font-ratio) * 1em);
}

a * {
  display: none;
}

.translation {
  position: absolute;
  top: 0;
  left: 0;
  margin: 1.09375em;
  color: #8EC7FF;
  text-decoration: none;
}

.translation::first-letter {
  text-transform: uppercase;
}

header,
main {
  background-color: var(--main-bg-color);
  padding: 0 var(--content-h-padding);
}

header,
.description {
  flex: none;
  display: flex;
  justify-content: space-between;
}

header {
  --min-height: 24.875em;
  --planet-glow-height: 49.75em;
  --stars-height: 1050px;
  --stars-end: calc(var(--planet-glow-height) + var(--stars-height));
  --top-padding-font-ratio: 4.42;
  --normal-top-padding: calc(var(--top-padding-font-ratio) * 1em);
  --resolution-fit-top-padding: calc(3.75 * var(--top-padding-font-ratio) * var(--vw-relative-font-size));
  --top-padding: min(var(--normal-top-padding), var(--resolution-fit-top-padding));

  align-items: flex-start;
  min-height: var(--min-height);
  box-sizing: border-box;
  padding: var(--top-padding) var(--content-h-padding);

  background-image:
    linear-gradient(
      to top,
      transparent var(--planet-glow-height),
      var(--doc-bg-color) var(--planet-glow-height),
      rgba(var(--doc-bg-color-rgb-components), 66%) var(--stars-end)
    ),
  
    url(../images/stars.png),
    url(../images/stars.png),
    url(../images/header_background.svg),

    linear-gradient(
      to top,
      transparent 15.625em,
      var(--doc-bg-color) var(--planet-glow-height)
    );
  
  background-size:
    auto,
    auto,
    auto,
    max(100%, 1440px) auto,
    auto;
  
  background-position:
    center bottom,
    center bottom var(--stars-end),
    center bottom var(--planet-glow-height),
    center bottom,
    center bottom;

  background-repeat:
    no-repeat,
    repeat-x,
    repeat-x,
    no-repeat,
    no-repeat;
}

header h2:not(:last-child) {
  margin-bottom: max(0.72em, 15px);
}

header p {
  margin: 0;
}

.introductions {
  display: contents;
}

.column {
  flex: 1 1 auto;
  max-width: 31.04em;
  margin: 0 1em;
  text-align: left;
}

header .column:not(.long-introduction) {
  min-width: calc(320px - 2em);
}

header .column:not(.demos) {
  margin-bottom: 4.42em;
}

.business-card {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.business-card h2 {
  --resolution-fit-font-size: calc(var(--font-ratio) * var(--vw-relative-font-size));
  --resolution-capped-font-size: max(var(--resolution-fit-font-size), 14.5px);
  --normal-font-size: calc(var(--font-ratio) * 1em);

  font-size: min(var(--normal-font-size), var(--resolution-capped-font-size));
}

.short-introduction .web {
  display: none;
}

.short-introduction,
h2 {
  line-height: 1;
}

.avatar {
  --size: 7.5em;

  flex: none;
  width: var(--size);
  height: var(--size);
  border-radius: 50%;
  object-fit: cover;
  object-position: center -0.75em;
  box-sizing: border-box;
  border: solid 1px rgba(var(--doc-bg-color-rgb-components), 33%);
  background-color: white;
  margin-right: 1em;
}

.avatar.print {
  display: none;
}

.short-introduction {
  width: 69.855%;
}

.fullname {
  opacity: 60%;
  margin-bottom: 0.54em;
}

.contact {
  --size: max(1.09em, 26.25px);

  position: relative;
  display: inline-block;
  width: var(--size);
  height: var(--size);
  background: no-repeat center/contain url(../images/linkedin.svg);
}

@media (hover: none) {
  .contact::after {
    --expanse: 0.5em;
  
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    margin: calc(-1 * var(--expanse));
    padding: var(--expanse);
    border-radius: 50%;
  }
}

.technologies svg {
  color: #BBB74C;
}

.demos {
  flex: 2;
}

.demos-inner-wrapper {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.demos-inner-wrapper > .aspect-ratio-enforcer {
  width: 100%;
  max-height: 13.9875em;
  flex: none;

  /* DEBUG *
  background-color: rgba(255, 255, 0, 12.5%);
  /* END DEBUG */
}

.demo {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: var(--top);
  left: var(--left);
  width: var(--size);
  box-sizing: border-box;
  border-radius: 50%;
  border: solid 1px rgba(255, 255, 255, 62.5%);
  background: white no-repeat center/auto calc(100% + 2px);
  transform: translate(-50%, -50%);
  box-shadow: 0 0 0 1px rgba(var(--doc-bg-color-rgb-components), 12.5%);
  pointer-events: none;
  cursor: pointer;
  z-index: 0;
}

@media (hover: hover) {
  .demo:hover {
    border-color: white;
  }
}

@media (hover: none) {
  .demo.hover {
    border-color: white;
  }
}

.demo::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  pointer-events: auto;
}
/* ... */

